--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+**/*.yaml
+**/*.ser
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,intellij+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,intellij+all
 
