Update settings and instructions

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/*.yaml
 **/*.ser
+.env
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,intellij+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,intellij+all
