--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,7 +39,12 @@
   "git.followTagsWhenSync": true,
   "git.rebaseWhenSync": true,
   "editor.wordWrap": "bounded",
-  "chat.mcp.discovery.enabled": true,
+  "chat.mcp.discovery.enabled": {
+    "claude-desktop": true,
+    "windsurf": true,
+    "cursor-global": true,
+    "cursor-workspace": true
+  },
   "workbench.colorTheme": "GitHub Light",
   "workbench.iconTheme": "material-icon-theme",
   "git.autoStash": true
