--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,7 +45,7 @@
     "cursor-global": true,
     "cursor-workspace": true
   },
-  "workbench.colorTheme": "GitHub Light",
+  "workbench.colorTheme": "Default Light Modern",
   "workbench.iconTheme": "material-icon-theme",
   "git.autoStash": true
 }
